--- a/templates/prive/_header.html.twig
+++ b/templates/prive/_header.html.twig
@@ -25,7 +25,7 @@
               {% if app.user %}
               {% if is_granted("ROLE_ADMIN") %}
                 <li class="nav-item">
-                  <a class="nav-link" href="{{ path('app_admin')}}">Admin
+                  <a class="nav-link" href="{{ path('admin')}}">Admin
                   </a>
                 </li>
               {% endif %}
