--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,10 +4,11 @@
 
 {% block body %}
 
-<div class="jumbotron text-center">
-    <h1 class="display-4">Accueil</h1>
+<div class="jumbotron text-center" style="background-color:red;">
+    <hr class="my-1">
+    <h1 class="display-4">Les Recettes de Catherine</h1>
     <hr class="my-4">
-    <p>Bienvenue sur le site des recettes.</p>
-   
+    <h4>Bienvenue sur le site des recettes. Vous allez vous régaler !!!</h4>
+    <img src="{{asset('images/ihoqvy90.gif') }}" alt="gif souris sur gruyere" class="souris" />
   </div>
 {% endblock %}
