--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,6 +24,7 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link href="{{ asset('css/style.css')}}" rel="stylesheet" />
     {% endblock %} {% block javascripts %}
     {{
       encore_entry_script_tags("app")
