--- a/templates/prive/_header.html.twig
+++ b/templates/prive/_header.html.twig
@@ -1,22 +1,24 @@
-<nav class="navbar navbar-expand-lg bg-primary d-flex" data-bs-theme="dark">
-    <div class="container-fluid">
+<nav class="navbar navbar-expand-lg  d-flex" style="background-color:red; color:yellow;" data-bs-theme="">
+    <div class="container-fluid" style="background-color:red; color:yellow;">
       
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand p-0 m-0" width="30%" href="{{ path('app_home')}}">
+          <img src="{{asset('images/souris.png') }}" alt="souris et gruyere" width="15%"  />
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarColor01">
           <div class="navbar-nav me-auto">
             <li class="nav-item">
-              <a class="nav-link" href="{{ path('app_home')}}">Accueil
+              <a class="nav-link"  href="{{ path('app_home')}}">Accueil
               </a>
             </li>   
             <li class="nav-item">
-              <a class="nav-link" href="{{ path('app_ingredient')}}">Ingrédients
+              <a class="nav-link" href="{{ path('app_recette', {categorie : "entrees"})}}">Entrées
               </a>
             </li>   
             <li class="nav-item">
-              <a class="nav-link" href="{{ path('app_recette')}}">Recettes
+              <a class="nav-link" href="{{ path('app_recette')}}">Plats
               </a>
             </li> 
           </div>
